<resources>
    <!-- Various Strings -->
    <string name="app_name">Save Lives</string>
    <string name="loading">Loader of the splash page</string>
    <string name="login_text">login</string>
    <string name="signUp_text">signUp</string>
    <string name="app_title">Save Lives !</string>
    <string name="logo_heart">logo of the application</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="reset_pwd">forgot password ?</string>
    <string name="firstName">firstName</string>
    <string name="lastName">lastName</string>
    <string name="email">email</string>
    <string name="phone">phone number</string>
    <string name="address">address</string>
    <string name="radio_text_1">Male</string>
    <string name="radio_text_2">Female</string>
    <string name="check_box_1">I want to be a donor</string>
    <string name="gender">Gender</string>
    <string name="blood_type">Blood type</string>
    <string name="select_a_picture">Select a picture</string>
    <string name="camera_img_description">Image boutton pour la selection d\'une image</string>
    <string name="edit_done">save</string>
    <string name="success">Success !</string>
    <string name="your_request_have_been_successfully_added">Your request have been successfully added !</string>
    <string name="okay">OKAY</string>

    <!-- profile part -->
    <string name="user_name">Sara Chakir</string>
    <string name="img_profile_desc">image correspondant au profil de l\'utilisateur</string>
    <string name="img_cells">TODO</string>
    <string name="edit_text">edit</string>
    <string name="profile_phone_number">+212638743853</string>
    <string name="profile_address">Abwab gueliz, Marrakech, Maroc</string>
    <string name="profile_gender">female</string>
    <string name="profile_blood_group">A+</string>
    <string name="profile_email">fredericfaya@gmail.com</string>

    <!-- donor_list part -->
    <string name="icon">icon</string>
    <string name="donors_list">Donors List</string>
    <string name="choose_your_city">Choose your City:</string>
    <string name="search">Search</string>
    <string name="choose_blood_group">Choose Blood Group:</string>


    <!-- Spinner for Cities -->
    <string-array name="city_list">
        <item>City</item>
        <item>Marrakech</item>
        <item>Rabat</item>
        <item>Safi</item>
        <item>Casablanca</item>
        <item>Sale</item>
        <item>Tanger</item>
        <item>Fes</item>
        <item>Meknes</item>
        <item>Agadir</item>
        <item>Essaouira</item>
        <item>Chefchaouen</item>
        <item>Tetouan</item>
        <item>Ifrane</item>
        <item>Temara</item>
        <item>Laayoune</item>
        <item>Dakhla</item>
        <item>Zagoura</item>
        <item>Tata</item>

    </string-array>
    <!-- Spinner for Blood Groups -->
    <string-array name="bloodGroups">
        <item>Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <!-- Spinner for genders -->
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- Menu Titles -->
    <string-array name="ld_activityScreenTitles">
        <item></item>
        <item>Home</item>
        <item>Profile</item>
        <item>List of Requesters </item>
        <item>List of Donors</item>
        <item />
        <item>Log Out</item>
    </string-array>

    <!-- Menu Icons -->
    <string-array name="ld_activityScreenIcons">
        <item>@drawable/ic_baseline_close_24</item>
        <item>@drawable/ic_baseline_home_24</item>
        <item>@drawable/ic_baseline_account_box_24</item>
        <item>@drawable/ic_baseline_list_24</item>
        <item>@drawable/ic_requesters</item>
        <item>0</item>
        <item>@drawable/ic_logout</item>
    </string-array>


    <!-- drawer part -->
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="demanders_list">Demanders List</string>
    <string name="home">Home</string>
    <string name="floating_button">button for lauching request form</string>

    <!-- Onboarding part -->
    <string name="title1">Title</string>
    <string name="title2">Title</string>
    <string name="title3">About AB-</string>
    <string name="title4"> About B+</string>
    <string name="description1">Opportunities knock the door sometimes, so don’t let it go and donate blood!</string>
    <string name="description2">Blood Donation will cost you nothing, but it will save a life!</string>
    <string name="description3">Never refuse to donate blood if you can, as you may be the next needy!</string>
    <string name="description4">Sometimes money cannot save life but donated blood can!</string>
    <string name="todo">TODO</string>


    <!-- Others -->
    <string name="srn_drawer_open">Open</string>
    <string name="srn_drawer_close">Close</string>
    <string name="srn_ex_no_menu_view">No view for menu provided. You must either call .withMenuView(View) or pass a valid resource id to .withMenuLayout(int)</string>
    <string name="srn_ex_bad_content_view">Your content view must contain exactly one child. Make sure you call inject() after setContentView().</string>
    <string name="name">Name</string>
    <string name="lastname">Name</string>
    <item name="srn_root_layout" type="id" />




</resources>