<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_img"
        tools:context=".Activities.SignUpActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="101dp"
            android:layout_height="48dp"
            android:alpha="0.6"
            android:onClick="goToLogin"
            android:text="@string/login_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.029"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp_text"
            android:textAlignment="center"
            android:textColor="#FCE4EC"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.598"
            app:layout_constraintStart_toEndOf="@+id/textView"
            tools:ignore="TextContrastCheck" />

        <View
            android:layout_width="100dp"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

        </View>

        <ImageView
            android:id="@+id/logo_heart"
            android:layout_width="149dp"
            android:layout_height="139dp"
            android:layout_marginTop="92dp"
            android:contentDescription="@string/logo_heart"
            android:src="@drawable/heart_cross"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_heart" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="292dp"
            android:layout_height="53dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_title"
            tools:ignore="TextContrastCheck"
            android:autofillHints=""  />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="292dp"
            android:layout_height="53dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/lastName"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstname"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/email"
            android:layout_width="292dp"
            android:layout_height="53dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@+id/lastName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/lastName"
            app:layout_constraintTop_toBottomOf="@+id/lastName"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="292dp"
            android:layout_height="53dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/address"
            android:layout_width="283dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="@+id/editTextPhone"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="97dp"
            android:layout_height="33dp"
            android:layout_marginTop="40dp"
            android:text="@string/gender"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address"
            android:autofillHints=""/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/radio_blue"
                android:checked="true"
                android:text="@string/radio_text_1"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/radio_text_2"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </RadioGroup>

        <TextView
            android:id="@+id/blood_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/blood_type"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Spinner
            android:id="@+id/listGrpBlood"
            android:layout_width="153dp"
            android:layout_height="37dp"
            android:layout_marginTop="24dp"
            android:background="#FBD5D5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blood_type"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/username_login"
            android:layout_width="292dp"
            android:layout_height="53dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listGrpBlood"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="292dp"
            android:layout_height="53dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_login"
            tools:ignore="TextContrastCheck"
            android:autofillHints="" />

        <TextView
            android:id="@+id/picture_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/select_a_picture"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_login" />

        <ImageButton
            android:id="@+id/add_img"
            android:layout_width="139dp"
            android:layout_height="123dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/camera_img_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picture_title"
            app:srcCompat="@drawable/camera_small" />

        <CheckBox
            android:id="@+id/checkBox_cond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:buttonTint="@color/radio_blue"
            android:checked="true"
            android:text="@string/check_box_1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_img" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="158dp"
            android:layout_height="62dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/white"
            android:text="@string/signUp_text"
            android:textAllCaps="false"
            android:textColor="@color/primary_color"
            android:textSize="24sp"
            android:typeface="normal"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_cond"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>