<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/searchform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/choose_blood_group"
                android:textColor="#000000" />
            <Spinner
                android:id="@+id/BloodGroupList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/donors_list"
                android:entries="@array/Blood_Group"
                android:padding="5dp"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:background="@drawable/panel"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck"

                 />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/choose_your_city"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/cityList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/choose_your_city"
                android:entries="@array/city_list"
                android:padding="5dp"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
                android:textColorHint="@color/white"
                android:background="@drawable/panel"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#EC0911"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchform"/>

</RelativeLayout>